Bug 127958 - Crash in: mergedlo.dll (adding 2 or more ODT files into Writer master document)
Summary: Crash in: mergedlo.dll (adding 2 or more ODT files into Writer master document)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.3.1.1 rc
Hardware: All All
: high major
Assignee: Not Assigned
URL:
Whiteboard: target:6.4.0 target:6.3.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks: Writer-Master-Doc
  Show dependency treegraph
 
Reported: 2019-10-04 07:08 UTC by Roman Kuznetsov
Modified: 2019-11-05 11:35 UTC (History)
4 users (show)

See Also:
Crash report or crash signature: ["SfxItemSet::ClearItem(unsigned short)"]


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Roman Kuznetsov 2019-10-04 07:08:35 UTC
This bug was filed from the crash reporting server and is br-82b69ccd-20c3-4dab-9556-fd9cba8e9ede.
=========================================

Create a master document
In Navigator select Insert->File
Select 2 or more any ODT files together (use Ctrl key for multiselect) and press Open
LO crashes

If you'll add only one file then LO works fine. You can to add file-by-file now

Version: 6.3.1.1 (x86)
Build ID: e979878b49a48dab15ebe528f238b88125e32c65
CPU threads: 4; OS: Windows 6.1; UI render: default; VCL: win; 
Locale: ru-RU (ru_RU); UI-Language: en-US
Calc: threaded

this doesn't repro in

6.2.4

So it's a regression
Comment 1 Xisco Faulí 2019-10-04 08:05:02 UTC
Reproduced in

Version: 6.4.0.0.alpha0+
Build ID: c9336bfb6bbf6d73d3f23c124262ade30133448d
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded
Comment 2 Xisco Faulí 2019-10-04 08:15:05 UTC
Regression introduced by:

https://cgit.freedesktop.org/libreoffice/core/commit/?id=fb19a399fef73c05bbe570cb32d43ccf28d1b9c6

author	Noel Grandin <noel.grandin@collabora.co.uk>	2018-12-18 14:17:11 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2018-12-18 15:30:16 +0100
commit fb19a399fef73c05bbe570cb32d43ccf28d1b9c6 (patch)
tree 0b8d52e9bd81d04df835a9c7633fb159f75f1bb4
parent 6f8186138d560d1949f89f4a525c0bd911af203e (diff)
use unique_ptr in SfxMediumList

Bisected with: bibisect-linux64-6.3

Adding Cc: to Noel Grandin
Comment 3 Commit Notification 2019-10-07 08:29:11 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/8f6f9e4217d03d874fb1ce391730a1c893ab6844

tdf#127958 crash adding 2 or more files into writer master document

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2019-10-07 11:28:33 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-6-3":

https://git.libreoffice.org/core/commit/e200d3a51157e81eb66dbfc0961ae94c47b3c6e7

tdf#127958 crash adding 2 or more files into writer master document

It will be available in 6.3.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Xisco Faulí 2019-10-08 13:38:36 UTC
Verified in

Version: 6.4.0.0.alpha0+
Build ID: 8f4fdb405a8470b9d06ab14ced120da89b213e82
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); UI-Language: en-US
Calc: threaded

@Noel, thanks for fixing this issue!
Comment 6 Xisco Faulí 2019-11-05 11:35:04 UTC
*** Bug 128544 has been marked as a duplicate of this bug. ***