tdf#127958 crash adding 2 or more files into writer master document

clean up the memory management here, the SfxMedium wants to own the
passed-in SfxItemSet

Change-Id: I1bafa520ca7b833c4d2df7593649c3720c46e2ce
Reviewed-on: https://gerrit.libreoffice.org/80332
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>